--- a/sass/_var.scss
+++ b/sass/_var.scss
@@ -1,6 +1,7 @@
 // color
 $colorMain: #323231;
 $colorSec: #eee;
+$colorAll: #aaa;
 $colorLect:#b0dcf0;
 $colorFound: #eba9bf;
 $colorEvent: #b1f9b4;
