--- a/sass/_md.scss
+++ b/sass/_md.scss
@@ -203,9 +203,21 @@
 }
 
 @media screen and (min-width: 768px){
-    .para, .video{
-        height: 200px;
-        max-height: 400px;
+    .bear-news-slide-shell{
+        .bear-news-slide{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-evenly;
+            .para, .video{
+                @include rect(42%, 250px);
+                transform: scale(.9);
+                overflow: hidden;
+                &:hover{
+                    transform: scale(1);
+                    transition: .5s;
+                }
+            }
+        }
     }
     .para h3, .video-tag{
         padding-bottom: 15px;
@@ -215,9 +227,7 @@
 @media screen and (min-width: 768px){
     .bear-founder{
         padding: 30px 0;
-        background-image: url('../img/woodbear-1.png');
-        background-position: left bottom;
-        background-size: 1400px 1400px;
+        @include bgSet(url('../img/woodbear-1.png'), null, left bottom, 1400px 1400px);
         text-align: center;
     }
 
@@ -303,14 +313,14 @@
     .bear-story-turn-coll-pic-shell{
         padding-bottom: 700px;
     }
-    .bear-story-intro-title h3{
-        height: 100px;
+    .bear-story-intro-title{
+        h3{ height: 100px; }
     }
     .bear-story-intro-coll-text-shell{
         height: 300px;
     }
-    .bear-story-local-text p{
-        width: 1000px;
+    .bear-story-local-text{
+        p{ width: 1000px; }
     }
     .bear-story-next-shell{
         padding: 30px 0;
@@ -374,8 +384,8 @@
     #bssp7{ width: 30%; padding-bottom: 50%;}
     #bssp8{ width: 50%; padding-bottom: 30%;}
 
-    .bear-story-sis-np p{
-        line-height: 1.6;
+    .bear-story-sis-np{
+        p{ line-height: 1.6; }
     }
 }
 
